restructured cpp files.